# cytrix-auth-crawler

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cytrix_crawler/: __init__.py  config.py
cytrix_crawler/auth/: __init__.py  login.py  session_store.py  validator.py
cytrix_crawler/crawl/: __init__.py  boundaries.py  orchestrator.py  worker.py
cytrix_crawler/dedupe/: __init__.py  hashing.py
cytrix_crawler/extract/: __init__.py  forms.py  links.py  metadata.py  normalize.py
cytrix_crawler/network/: capture.py  classify.py
demo_app/: .env.example  app.py
scripts/: phase8_shutdown_verify.py
tests/: conftest.py  test_auth_login.py  test_browser_requests_storage.py  test_config_validation.py  test_crawl_boundaries.py  test_errors_storage.py  test_extract_forms.py  test_extract_forms_playwright.py  test_extract_links.py  test_extract_metadata.py  test_form_hash.py  test_forms_storage.py  test_links_storage.py  test_login_result_update.py  test_login_validator.py  test_network_capture_playwright.py  test_network_classify.py  test_pages_storage.py  test_phase8_mongo_integration.py  test_queue_manager_integration.py  test_queue_manager_unit.py  test_queue_models.py  test_queue_worker_ownership.py  test_request_hash.py  test_scan_bootstrap.py  test_scans_status_summary.py  test_session_store.py  test_shutdown.py  test_url_normalize.py  test_worker_forms_extract.py  test_worker_idle_backoff.py  test_worker_navigation_timeout.py  test_worker_networkidle.py
(+13 files in other folders)
